--- a/css/app.css
+++ b/css/app.css
@@ -4,6 +4,19 @@ h1{
 h2{
   color: green;
 }
-h1 page 2{
+h1{
   color: blue;
+}
+u{
+color: red;
+}
+.link{
+  hover:red;
+}
+.hover{
+  speed:2s
+}
+.body{
+  color: green;
+  
 }
